# auto-schedule

./: Cargo.toml  README.md  calendar.ics  fetch_ics.sh  latest_calendar.ics
src/: compare.rs  fetch.rs  main.rs  parse.rs
