[package]
name = "auto-schedule"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.5"
actix-web = "4.0.0"
chrono = "0.4.38"
curl = "0.4.46"
ical = "0.11.0"
reqwest = "0.12.4"
tokio = { version = "1", features = ["full"] }

